fixed spacing

--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ Profile / Contacts
 }
 
 #description-container {
-    margin-top: 7em;
+    margin-top: 15em;
 }
 
 .project-description {
